# fcft

./: .gitlab-ci.yml  .gitmodules  .woodpecker.yml  CHANGELOG.md  PKGBUILD  README.md  fcft.c  fcft.h  generate-emoji-data.py  generate-unicode-precompose.sh  generate-version.sh  log.c  log.h  meson.build  meson_options.txt  nanosvg.c  nanosvgrast.c  svg-backend-nanosvg.c  svg-backend-nanosvg.h  test.c
.builds/: alpine-x64.yml  alpine.sr.ht.yml  alpine.yml  freebsd-x64.yml  freebsd.yml
ci/: freebsd.sr.ht.yml
doc/: fcft_capabilities.3.scd  fcft_clone.3.scd  fcft_codepoint_rasterize.3.scd  fcft_destroy.3.scd  fcft_fini.3.scd  fcft_from_name.3.scd  fcft_glyph_rasterize.3.scd  fcft_grapheme_rasterize.3.scd  fcft_init.3.scd  fcft_kerning.3.scd  fcft_log_deinit.3.scd  fcft_log_init.3.scd  fcft_precompose.3.scd  fcft_rasterize_char_utf32.3.scd  fcft_rasterize_grapheme_utf32.3.scd  fcft_rasterize_text_run_utf32.3.scd  fcft_set_downscale_filter.3.scd  fcft_set_emoji_presentation.3.scd  fcft_set_scaling_filter.3.scd  fcft_size_adjust.3.scd  fcft_text_run_destroy.3.scd  fcft_text_run_rasterize.3.scd  meson.build
example/: main.c  meson.build  shm.c  shm.h
fcft/: fcft.h
subprojects/tllist/: README.md
unicode/: LICENSE
